# Magdrone_2

./: CMakeLists.txt  LICENSE  README.md  package.xml
cfg/: px4_pluginlists.yaml
include/magdrone_2/: attitude_controller.h  joy_controller.h  joy_controller.hpp
launch/: px4.launch  t265.launch  test_mocap.launch  test_vio.launch  test_vio_pose.launch
src/: attitude_controller.cc  attitude_controller_node.cc  joy_controller.cc  velocity_controller_tuning.cc
